refactor hero detail as own component

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,5 @@
 <p>heroes works!</p>
-<h2>{{hero.name | uppercase}} Details</h2>
+<!-- <h2>{{hero.name | uppercase}} Details</h2> -->
 
 <h2>My Heroes</h2>
 <ul class="heroes">
@@ -10,12 +10,5 @@
   </li>
 </ul>
 
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name"/>
-    </label>
-  </div>
-</div>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail></app-hero-detail> -->
